test/netlist/error/used-var-not-assigned.bop
A() = b
where
  b = Not(c);
end where;
